--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 exclude: [.git]
 markdown: redcarpet
-pygments: true
+highlighter: true
 paginate: 5
 paginate_path: "page:num"
 paginator_prefix: "/page"
