add Git slides and reveal.js lib

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,6 +1,6 @@
 announcement: "this is an announcement"
 weibo: "http://weibo.com/hilr"
-production_url : "http://quicksort.cn"
+production_url : "http://blog.quicksort.cn"
 title: QuickSort
 name: QuickSort
 author:
